JSAI/error/src/test/resources/base/notjslibrary_a007.js
var i = 0/0;
var q = "" + i;
print(q);
q
